--- a/nginx/nginx.yml
+++ b/nginx/nginx.yml
@@ -5,105 +5,92 @@ metadata:
 data:
   nginx.conf: |
     user nginx;
-    worker_processes  3;
-    error_log  /var/log/nginx/error.log;
+    worker_processes  1;
+
     events {
       worker_connections  10240;
     }
+    env POD_NAMESPACE;
+    env NODE_NAME;
     http {
-      log_format  main
-              'remote_addr:$remote_addr\t'
-              'time_local:$time_local\t'
-              'method:$request_method\t'
-              'uri:$request_uri\t'
-              'host:$host\t'
-              'status:$status\t'
-              'bytes_sent:$body_bytes_sent\t'
-              'referer:$http_referer\t'
-              'useragent:$http_user_agent\t'
-              'forwardedfor:$http_x_forwarded_for\t'
-              'request_time:$request_time';
-
-      access_log	/var/log/nginx/access.log main;
-
+      lua_shared_dict my_dict 10m;
       server {
           listen       80;
-          server_name  _;
+          server_name  localhost;
+
 
           location / {
-              root   html;
-              index  index.html index.htm;
-          }
-      }
-      include /etc/nginx/virtualhost/virtualhost.conf;
-    }
-  virtualhost.conf: |
-    upstream app {
-      server localhost:8080;
-      keepalive 1024;
-    }
+              set_by_lua $namespace 'return os.getenv("POD_NAMESPACE")';
+              set_by_lua $node_name 'return os.getenv("NODE_NAME")';
+              default_type text/html;
+              return 200 '<html><body><h1>Pod Information</h1>
+              <p><h1>Pod: $hostname</h1> </p>
+              <p><h1>Node: $node_name</h1></p>
+              <p><h1>Namespace: $namespace</h1> </p>
+              <p><h1>IP: $remote_addr</h1></p>
+              </body></html>';
 
-    server {
-      listen 80 default_server;
-      root /usr/local/app;
-
-      access_log /var/log/nginx/app.access_log main;
-      error_log /var/log/nginx/app.error_log;
-
-      location / {
-        proxy_pass http://app/;
-        proxy_http_version 1.1;
+        }
       }
     }
 
 ---
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: nginx
 spec:
-  replicas: 3
   selector:
     matchLabels:
       app: nginx
+  replicas: 3
   template:
     metadata:
       labels:
         app: nginx
     spec:
       containers:
-        - name: nginx
-          image: nginx:latest
-          ports:
-            - containerPort: 80
-          volumeMounts:
-            - mountPath: /etc/nginx # mount nginx-conf volumn to /etc/nginx
+      - name: nginx
+        image: fabiocicerchia/nginx-lua
+        env:
+          - name: POD_NAMESPACE
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.namespace
+          - name: POD_NAME
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.name
+          - name: NODE_NAME
+            valueFrom:
+              fieldRef:
+                fieldPath: spec.nodeName
+        ports:
+        - containerPort: 80
+
+        volumeMounts:
+            - name: nginx-conf
+              mountPath: /etc/nginx/nginx.conf
+              subPath: nginx.conf
               readOnly: true
-              name: nginx-conf
-            - mountPath: /var/log/nginx
-              name: log
       volumes:
       - name: nginx-conf
         configMap:
-          name: nginx-conf # place ConfigMap `nginx-conf` on /etc/nginx
+          name: nginx-conf
           items:
             - key: nginx.conf
               path: nginx.conf
-            - key: virtualhost.conf
-              path: virtualhost/virtualhost.conf # dig directory
-      - name: log
-        emptyDir: {}
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service
+  name: my-nginx-svc
+  labels:
+    app: nginx
 spec:
   type: LoadBalancer
   ports:
-    - port: 80
-      targetPort: 80
+  - port: 80
   selector:
     app: nginx
